--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@fontsource/fira-mono": "^4.5.8",
     "@fontsource/fira-sans": "^4.5.8",
     "@sveltejs/adapter-node": "^1.0.0-next.82",
+    "@sveltejs/kit": "^1.0.0-next.386",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/polka": "^0.5.4",
     "@types/source-map-support": "^0.5.4",
+    "@types/wait-on": "^5.3.1",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
@@ -79,7 +81,7 @@
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.2",
-    "@sveltejs/kit": "^1.0.0-next.386"
+    "wait-on": "^6.0.1"
   },
   "dependencies": {
     "electron-log": "^4.4.8",
