--- a/package.json
+++ b/package.json
@@ -80,14 +80,14 @@
     "tailwindcss": "^3.1.6",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "^3.0.2",
-    "wait-on": "^6.0.1"
+    "vite": "^3.0.2"
   },
   "dependencies": {
     "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.2",
     "polka": "^0.5.2",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.15.0",
+    "wait-on": "^6.0.1"
   }
 }
