feat: :twisted_rightwards_arrows: project strcture overhall

--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "sketstdt",
+  "name": "svelte-kit-electron-template",
   "productName": "Template",
   "version": "0.0.1",
-  "description": "This is a starter SvelteKit-Electron-Typescript-Tailwindcss-Daisyui Template configured with the node-adapter",
+  "description": "A Svelte-Kit Electron template",
   "main": "build/electron/index.cjs",
   "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=dev PORT=29890 yarn dev",
-    "dev": "node scripts/dev/watcher.js",
-    "build": "node scripts/clear_build_dir.js && yarn build:all",
-    "build:all": "concurrently -n=SvelteKit,TSC -c='#ff3e00','#3178c6' yarn:svelte:build yarn:electron:transpile",
-    ".": ".",
-    "svelte:dev": "vite dev",
-    "svelte:build": "node scripts/svelte/build.js && node scripts/svelte/convert.js",
-    "..": "..",
-    "electron:dev": "concurrently --handle-input -n=TSC,Nodemon -c='#3178c6','#76d04b' yarn:electron:transpile:watch \"yarn nodemon\"",
-    "electron:transpile": "tsc -p src-electron/tsconfig.json && node scripts/add_package_json.js",
-    "electron:transpile:watch": "tsc -w -p src-electron/tsconfig.json --preserveWatchOutput",
-    "...": "...",
+    "start": "node scripts/watch.js",
+    "build": "node scripts/build.js && node scripts/convert_handler.js",
     "package": "yarn build && electron-forge package",
     "make": "yarn build && electron-forge make",
     "publish": "yarn build && electron-forge publish",
     "lint": "eslint --ext .ts .",
     "....": "Todo: make a sophisticated test suit",
-    "test": "yarn package && ./out/ff-linux-x64/ff"
+    "test": "yarn package && out/Template-linux-x64/Template"
   },
   "keywords": [],
   "author": {
@@ -35,38 +25,36 @@
     "forge": "./forge.config.cjs"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.64",
-    "@electron-forge/maker-deb": "^6.0.0-beta.64",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.64",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
-    "@electron-forge/maker-zip": "^6.0.0-beta.64",
+    "@electron-forge/cli": "^6.0.0-beta.65",
+    "@electron-forge/maker-deb": "^6.0.0-beta.65",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.65",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.65",
+    "@electron-forge/maker-zip": "^6.0.0-beta.65",
     "@fontsource/fira-code": "^4.5.10",
     "@fontsource/fira-mono": "^4.5.8",
     "@fontsource/fira-sans": "^4.5.8",
-    "@sveltejs/adapter-node": "^1.0.0-next.83",
-    "@sveltejs/kit": "^1.0.0-next.391",
+    "@sveltejs/adapter-node": "^1.0.0-next.85",
+    "@sveltejs/kit": "^1.0.0-next.396",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/polka": "^0.5.4",
     "@types/source-map-support": "^0.5.4",
     "@types/wait-on": "^5.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "autoprefixer": "^10.4.7",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^7.3.0",
-    "cross-env": "^7.0.3",
-    "daisyui": "^2.19.1",
-    "electron": "^19.0.9",
-    "esbuild": "^0.14.49",
+    "daisyui": "^2.20.0",
+    "electron": "^19.0.10",
+    "esbuild": "^0.14.51",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "node-sass": "^7.0.1",
-    "nodemon": "^2.0.19",
     "polka": "^0.5.2",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
@@ -80,7 +68,7 @@
     "tailwindcss": "^3.1.6",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "^3.0.2"
+    "vite": "^3.0.3"
   },
   "dependencies": {
     "electron-devtools-installer": "^3.2.0",
