--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "@fontsource/fira-mono": "^4.5.8",
     "@fontsource/fira-sans": "^4.5.8",
     "@sveltejs/adapter-node": "^1.0.0-next.85",
-    "@sveltejs/kit": "^1.0.0-next.396",
+    "@sveltejs/kit": "1.0.0-next.396",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/polka": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
     "daisyui": "^2.20.0",
     "electron": "^19.0.10",
@@ -60,10 +60,10 @@
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.1.7",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "^3.0.3"
+    "vite": "^3.0.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.2",
