--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "singleQuote": true,
-  "printWidth": 80,
-  "arrowParens": "avoid",
-  "tabWidth": 2,
   "useTabs": false,
+  "tabWidth": 2,
+  "singleQuote": true,
   "trailingComma": "none",
-  "bracketSpacing": true,
-  "semi": true
+  "arrowParens": "avoid",
+  "printWidth": 80,
+  "pluginSearchDirs": ["."],
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
